[package]
name = "cuda-fusion"
version = "0.1.0"
edition = "2021"
description = "Multi-sensor fusion with outlier rejection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-fusion"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

